--- a/HealthLog/app/src/main/res/values/strings.xml
+++ b/HealthLog/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">HealthLogh</string>
+    <string name="app_name">HealthLog</string>
+    <string name="home">Home</string>
+    <string name="workout">Workout</string>
+    <string name="food">Food</string>
+    <string name="progress">Progress</string>
 </resources>
