--- a/HealthLog/app/src/main/res/values/strings.xml
+++ b/HealthLog/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="workout">Workout</string>
     <string name="food">Food</string>
     <string name="progress">Progress</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
